--- a/GymWare-Frontend/src/app/edit-comida/edit-comida.component.html
+++ b/GymWare-Frontend/src/app/edit-comida/edit-comida.component.html
@@ -1,25 +1,28 @@
 <ng-container *ngIf="enableEdit;else viewLabel">
-  <label>Editar Comida</label>
+  <label class="mb-3">Editar Comida</label>
 </ng-container>
 <ng-template #viewLabel>
-  <label>Ver Comida</label>
+  <label class="mb-3">Ver Comida</label>
 </ng-template>
 
 
 <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
-  <div class="form-container">
-    <mat-form-field>
+  <div class="form-container col-lg-12">
+    <mat-form-field class="col-lg-12">
       <input matInput placeholder="Nombre" [disabled]="!enableEdit" name="Nombre" [(ngModel)]="data.editedObject.Nombre" />
     </mat-form-field>
-    <mat-form-field>
+    <mat-form-field class="col-lg-8">
       <textarea matInput placeholder="Descripcion" [disabled]="!enableEdit" name="Descripcion" [(ngModel)]="data.editedObject.Descripcion"></textarea>
     </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Calorias" [disabled]="!enableEdit" name="Calorias" [(ngModel)]="data.editedObject.Calorias" type="number" min="1" max="5000" />
+    <mat-form-field class="col-lg-4 mt-4">
+      <input matInput placeholder="Calorias" [disabled]="!enableEdit" name="Calorias" [(ngModel)]="data.editedObject.Calorias"
+        type="number" min="1" max="5000" />
     </mat-form-field>
-    <div class="button-row">
-      <button mat-raised-button color="primary" type="submit" [hidden]="!enableEdit">Guardar</button>
+    <div class="button-row  offset-lg-8 col-lg-4 mt-5">
+      <button class="mr-2" mat-raised-button color="primary" type="submit" [hidden]="!enableEdit">Guardar</button>
       <button mat-raised-button mat-dialog-close color="warn" [hidden]="!enableEdit">Cancelar</button>
+    </div>
+    <div class="button-row  offset-lg-10 col-lg-2">
       <button mat-raised-button mat-dialog-close color="primary" [hidden]="enableEdit">Cerrar</button>
     </div>
   </div>
