--- a/GymWare-Frontend/src/app/alta-comida/alta-comida.component.html
+++ b/GymWare-Frontend/src/app/alta-comida/alta-comida.component.html
@@ -1,18 +1,18 @@
-<label>Alta Comida</label>
+<label class="mb-3">Alta Comida</label>
 
-  <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate> 
-  <div class="form-container">
-      <mat-form-field>
-          <input matInput placeholder="Nombre" ngModel name="Nombre" /> 
-      </mat-form-field>
-    <mat-form-field>
-        <textarea matInput placeholder="Descripcion" ngModel name="Descripcion"></textarea> 
+<form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+  <div class="form-container col-lg-12">
+    <mat-form-field class="col-lg-12">
+      <input matInput placeholder="Nombre" ngModel name="Nombre" />
     </mat-form-field>
-    <mat-form-field>
-        <input matInput placeholder="Calorias" ngModel name="Calorias" type="number" min="1" max="5000"/> 
+    <mat-form-field class="col-lg-8">
+      <textarea matInput placeholder="Descripcion" ngModel name="Descripcion"></textarea>
     </mat-form-field>
-    <div class="button-row">
-      <button mat-raised-button color="primary" type="submit">Guardar</button>
+    <mat-form-field class="col-lg-4 mt-4">
+      <input matInput placeholder="Calorias" ngModel name="Calorias" type="number" min="1" max="5000" />
+    </mat-form-field>
+    <div class="button-row offset-lg-8 col-lg-4 mt-5">
+      <button class="mr-2" mat-raised-button color="primary" type="submit">Guardar</button>
       <button mat-raised-button mat-dialog-close color="warn">Cancelar</button>
     </div>
   </div>
