--- a/GymWare-Frontend/src/app/alta-rutina/alta-rutina.component.html
+++ b/GymWare-Frontend/src/app/alta-rutina/alta-rutina.component.html
@@ -1,99 +1,102 @@
-<label>Alta Rutina</label>
+<label mat-dialog-title>Alta Rutina</label>
 
-<form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
-  <div class="form-container col-lg-6 table-custom ">
-    <div class="col-lg-12">
-      <h3>Crear rutina</h3>
-    </div>
-    <div class="col-lg-12 div-form">
-      <mat-form-field class="col-lg-4">
-        <input matInput placeholder="Nombre" ngModel name="Nombre" />
-      </mat-form-field>
-      <mat-form-field class="col-lg-4">
-        <input matInput placeholder="Tipo" ngModel name="Tipo" />
-      </mat-form-field>
-      <mat-form-field class="col-lg-2">
-        <input matInput placeholder="EdadMin" type=number min="1" ngModel name="EdadMinima" />
-      </mat-form-field>
-      <mat-form-field class="col-lg-2">
-        <input matInput placeholder="EdadMax" type=number min="1" max="1" ngModel name="EdadMaxima" />
-      </mat-form-field>
-    </div>
 
-    <div class="col-lg-12 div-form">
-      <mat-radio-group ngModel name="Sexo">
-        <mat-radio-button value="Hombre" class="col-lg-2">Hombre</mat-radio-button>
-        <mat-radio-button value="Mujer" class="col-lg-2">Mujer</mat-radio-button>
-      </mat-radio-group>
-    </div>
+<mat-tab-group>
+  <mat-tab label="Datos">
+    <mat-dialog-content class="mat-typography mx-0">
+      <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+        <div class="form-container col-lg-12 table-custom">
+          <div class="col-lg-12 div-form">
+            <mat-form-field class="col-lg-4">
+              <input matInput placeholder="Nombre" ngModel name="Nombre" />
+            </mat-form-field>
+            <mat-form-field class="col-lg-4">
+              <input matInput placeholder="Tipo" ngModel name="Tipo" />
+            </mat-form-field>
+            <mat-form-field class="col-lg-2">
+              <input matInput placeholder="EdadMin" type=number min="1" ngModel name="EdadMinima" />
+            </mat-form-field>
+            <mat-form-field class="col-lg-2">
+              <input matInput placeholder="EdadMax" type=number min="1" max="1" ngModel name="EdadMaxima" />
+            </mat-form-field>
+          </div>
 
-    <div class="col-lg-12 div-form">
-      <mat-form-field class="col-lg-12">
-        <textarea matInput placeholder="Descripcion" ngModel name="Descripcion"></textarea>
-      </mat-form-field>
-    </div>
+          <div class="col-lg-12 div-form">
+            <mat-radio-group ngModel name="Sexo">
+              <mat-radio-button value="Hombre" class="col-lg-2">Hombre</mat-radio-button>
+              <mat-radio-button value="Mujer" class="col-lg-2">Mujer</mat-radio-button>
+            </mat-radio-group>
+          </div>
 
-    <div class="col-lg-24 boton-form">
-      <button mat-raised-button color="primary" type="submit">Guardar</button>
-    </div>
+          <div class="col-lg-12 div-form">
+            <mat-form-field class="col-lg-12">
+              <textarea matInput placeholder="Descripcion" ngModel name="Descripcion"></textarea>
+            </mat-form-field>
+          </div>
 
-  </div>
-</form>
+        </div>
 
-<form #formEjercicio="ngForm" (ngSubmit)="onSubmitEjercicio(formEjercicio)" novalidate>
-  <div class="form-container col-lg-6">
-    <div class="col-lg-12">
-      <h3>Agregar ejercicios</h3>
-    </div>
-    <mat-select placeholder="Ejercicios" ngModel name="cboxEjercicios" class="col-lg-12 div-form-derecha">
-      <mat-option *ngFor="let ejercicio of cboxEjercicios" [value]="ejercicio">
-        {{ejercicio.Descripcion}}
-      </mat-option>
-    </mat-select>
-    <mat-form-field class="col-lg-6 div-form-derecha-alt">
-      <input matInput placeholder="Series" value="1" type=number min="1" max="100" ngModel name="Series" />
-    </mat-form-field>
-    <mat-form-field class="col-lg-6 div-form-derecha-alt">
-      <input matInput placeholder="Repeticiones" value="1" type=number min="1" max="100" ngModel name="Repeticiones" />
-    </mat-form-field>
-    <button mat-mini-fab color="primary" type="submit" class="col-lg-12 div-form boton-form">
-      <i class="material-icons">add</i>
-    </button>
-  </div>
-</form>
+        <div class="offset-lg-9 col-lg-3 mt-5">
+          <button class="mr-3" mat-raised-button color="primary" type="submit">Guardar</button>
+          <button mat-raised-button color="warn" [mat-dialog-close]>Cancelar</button>
+        </div>
+      </form>
+    </mat-dialog-content>
+  </mat-tab>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
+  <mat-tab label="Ejercicios">
+    <mat-dialog-content class="mat-typography mx-0">
+      <form #formEjercicio="ngForm" (ngSubmit)="onSubmitEjercicio(formEjercicio)" novalidate>
+        <div class="form-container col-lg-12">
+          <mat-select placeholder="Ejercicios" ngModel name="cboxEjercicios" class="col-lg-3 div-form-derecha">
+            <mat-option *ngFor="let ejercicio of cboxEjercicios" [value]="ejercicio">
+              {{ejercicio.Descripcion}}
+            </mat-option>
+          </mat-select>
+          <mat-form-field class="col-lg-3 div-form-derecha-alt">
+            <input matInput placeholder="Series" value="1" type=number min="1" max="100" ngModel name="Series" />
+          </mat-form-field>
+          <mat-form-field class="col-lg-3 div-form-derecha-alt">
+            <input matInput placeholder="Repeticiones" value="1" type=number min="1" max="100" ngModel name="Repeticiones" />
+          </mat-form-field>
+          <div class="col-lg-2 offset-lg-1 div-form">
+          <button mat-raised-button color="primary" type="submit" class="mt-4">
+            Agregar
+          </button>
+        </div>
+        </div>
+      </form>
 
-  <ng-container matColumnDef="EjercicioId">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.ejercicio.EjercicioId}} </td>
-  </ng-container>
+      <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
 
-  <ng-container matColumnDef="Descripcion">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Descripcion </th>
-    <td mat-cell *matCellDef="let element"> {{element.ejercicio.Descripcion}} </td>
-  </ng-container>
+        <ng-container matColumnDef="Descripcion">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Descripcion </th>
+          <td mat-cell *matCellDef="let element"> {{element.ejercicio.Descripcion}} </td>
+        </ng-container>
 
-  <ng-container matColumnDef="Series">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Series </th>
-    <td mat-cell *matCellDef="let element"> {{element.series}} </td>
-  </ng-container>
+        <ng-container matColumnDef="Series">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Series </th>
+          <td mat-cell *matCellDef="let element"> {{element.series}} </td>
+        </ng-container>
 
-  <ng-container matColumnDef="Repeticiones">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Repeticiones </th>
-    <td mat-cell *matCellDef="let element"> {{element.repeticiones}} </td>
-  </ng-container>
+        <ng-container matColumnDef="Repeticiones">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Repeticiones </th>
+          <td mat-cell *matCellDef="let element"> {{element.repeticiones}} </td>
+        </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
-    <td mat-cell *matCellDef="let element">
-      <button mat-mini-fab color="warn">
-        <i class="material-icons" (click)="removeEjercicio(element.ejercicio.EjercicioId)">delete</i>
-      </button>
-    </td>
-  </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Acciones </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-mini-fab color="warn">
+              <i class="material-icons" (click)="removeEjercicio(element.ejercicio.EjercicioId)">delete</i>
+            </button>
+          </td>
+        </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="paginator-custom"></mat-paginator>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons class="paginator-custom"></mat-paginator>
+    </mat-dialog-content>
+  </mat-tab>
+</mat-tab-group>
