--- a/GymWare-Frontend/src/app/header/header.component.html
+++ b/GymWare-Frontend/src/app/header/header.component.html
@@ -17,7 +17,7 @@
                   Administración
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" [routerLink]="['/default/alta-cliente']">Clientes</a>
+                  <a class="dropdown-item" [routerLink]="['/default/abm-cliente']">Clientes</a>
                   <div class="dropdown-divider"></div>
                   <a class="dropdown-item" [routerLink]="['/default/asistencia-cliente']">Asistencia</a>
                   <div class="dropdown-divider"></div>
