--- a/GymWare-Frontend/src/app/center/center.component.css
+++ b/GymWare-Frontend/src/app/center/center.component.css
@@ -1,4 +1,5 @@
 #center {
     background-color: white !important;
-    border-radius: 3px;    
+    border-radius: 3px;
+    margin-top: 7%;    
 }
