--- a/GymWare-Frontend/src/app/cliente/cliente.component.html
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.html
@@ -10,9 +10,9 @@
     <div class="row no-padding">
       <div class="col-lg-12">
 
-        <h1 class="text-center">Ficha personal
+        <!-- <h1 class="text-center">Ficha personal
         </h1>
-        <hr>
+        <hr> -->
         <div class="col-lg-3">
           <div class="card card-stats">
             <div class="card-header card-header-warning card-header-icon">
