--- a/GymWare-Frontend/src/app/abm-cliente/abm-cliente.component.html
+++ b/GymWare-Frontend/src/app/abm-cliente/abm-cliente.component.html
@@ -1,3 +1,4 @@
+<button class="pdf" (click)="print()">PDF</button>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
 
   <ng-container matColumnDef="Nombre">
