--- a/GymWare-Frontend/src/app/cliente/cliente.component.html
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.html
@@ -95,13 +95,13 @@
             <mat-card class="card-cliente">Altura Act.:
               <strong>{{this.cliente.AlturaActual}}</strong> cm</mat-card>
           </div>
-          <div class="col-lg-12 card-cliente-container">
+          <!-- <div class="col-lg-12 card-cliente-container">
             <mat-card class="text-center card-cliente card-progress">
               <div class="div-progress text-center">
                 <strong>75%</strong>
               </div>
             </mat-card>
-          </div>
+          </div> -->
         </div>
         <div class="col-lg-6 table-custom">
           <h3 class="text-center" style="margin-top:2%; margin-bottom: 6%;">
