--- a/GymWare-Frontend/src/app/center/center.component.html
+++ b/GymWare-Frontend/src/app/center/center.component.html
@@ -1,4 +1,4 @@
-<section id="center">
+<section id="center" style="margin-bottom: 5%">
 		<div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12 col-md-offset-2">
