--- a/GymWare-Frontend/src/app/abm-dieta/abm-dieta.component.html
+++ b/GymWare-Frontend/src/app/abm-dieta/abm-dieta.component.html
@@ -1,3 +1,4 @@
+<h1>Listado de dietas</h1>
 <mat-form-field class="expanded filter-custom">
   <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar">
 </mat-form-field>
