--- a/GymWare-Frontend/src/app/footer/footer.component.html
+++ b/GymWare-Frontend/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
-<section id="footer">
-	<div *ngIf="this.tipo === '1'">
+
+	<!-- <div *ngIf="this.tipo === '1'">
 		<div class="row text-center text-xs-center text-sm-center text-md-center">
 			<div class="col-xs-12 col-sm-4 col-md-4">
 				<h5>Administración</h5>
@@ -44,7 +44,8 @@
 		</div>
 
 
-	</div>
+	</div> -->
+	<div id="footer">
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
 			<ul class="list-unstyled list-inline social text-center">
@@ -83,4 +84,4 @@
 		</div>
 		<hr>
 	</div>
-</section>
+</div>
