--- a/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.css
+++ b/GymWare-Frontend/src/app/amb-rutina/amb-rutina.component.css
@@ -42,3 +42,7 @@ table{
     box-shadow: 0 3px 5px -1px rgba(0,0,0,.2), 0 6px 10px 0 rgba(0,0,0,.14), 0 1px 18px 0 rgba(0,0,0,.12);
     margin-left: 100px;
 }
+h1 {
+    text-align: center;
+    margin-bottom: 2%;
+}
