--- a/GymWare-Frontend/src/app/center/center.component.css
+++ b/GymWare-Frontend/src/app/center/center.component.css
@@ -1,5 +1,8 @@
 #center {
     background-color: white !important;
     border-radius: 3px;
-    margin-top: 7%;    
+}
+h1 {
+    text-align: center;
+    margin-bottom: 2%;
 }
