--- a/GymWare-Frontend/src/app/center/center.component.html
+++ b/GymWare-Frontend/src/app/center/center.component.html
@@ -1,5 +1,9 @@
+<h1>
+        Bienvenido a GymWare
+    </h1>
 <section id="center" style="margin-bottom: 5%">
-		<div class="container">
+   
+		<!-- <div class="container"> -->
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12 col-md-offset-2">
                     <div class="info-box bg-aqua">
@@ -32,8 +36,8 @@
                     </div>
                 </div> 
             </div>           
-        </div>
-        <div class="container" style="margin-top:50px">
+        <!-- </div> -->
+        <div style="margin-top:50px">
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12 col-md-offset-2">
                     <div class="info-box bg-yellow">
