--- a/GymWare-Frontend/src/app/cliente/cliente.component.css
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.css
@@ -37,11 +37,11 @@
 }
 h2 {
     margin-bottom: 15px;
-    font-size: 22px;
+    font-size: 22px !important;
 }
 h3 {
     font-size: 20px;
 }
 .fc-right h2 {
-    font-size: 23px;
+    font-size: 23px !important;
 }
