--- a/GymWare-Frontend/src/app/cliente/cliente.component.html
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.html
@@ -8,10 +8,6 @@
   <div class="center">
     <div class="row no-padding">
       <div class="col-lg-12">
-
-        <!-- <h1 class="text-center">Ficha personal
-        </h1>
-        <hr> -->
         <div class="col-lg-3">
           <div class="card card-stats">
             <div class="card-header card-header-warning card-header-icon">
@@ -72,13 +68,12 @@
         <div *ngIf="calendarOptions" class="calendar-div">
             <ng-fullcalendar #ucCalendar [options]="calendarOptions"></ng-fullcalendar>
         </div>
-        <!-- <canvas baseChart [data]="barChartData" [labels]="barChartLabels" [chartType]="barChartType" [options]="barChartOptions"></canvas> -->
       </div>
       <div class="col-lg-6">
         <h2 class="text-center">Características
           <small>evolución histórica</small>
         </h2>
-        <div class="col-lg-6">
+        <div class="col-lg-6" style="margin-top: 6.5%">
           <div class="col-lg-6">
             <mat-card class="card-cliente">Peso Inicial:
               <strong>{{this.cliente.PesoInicial}}</strong> Kg</mat-card>
@@ -95,17 +90,10 @@
             <mat-card class="card-cliente">Altura Act.:
               <strong>{{this.cliente.AlturaActual}}</strong> cm</mat-card>
           </div>
-          <!-- <div class="col-lg-12 card-cliente-container">
-            <mat-card class="text-center card-cliente card-progress">
-              <div class="div-progress text-center">
-                <strong>75%</strong>
-              </div>
-            </mat-card>
-          </div> -->
         </div>
         <div class="col-lg-6 table-custom">
           <h3 class="text-center" style="margin-top:2%; margin-bottom: 6%;">
-            <small>Rutina - "{{this.rutina[0].Rutina.Nombre}}"</small>
+            Rutina - "{{this.rutina[0].Rutina.Nombre}}"
           </h3>
           <table mat-table [dataSource]="dataSource2" matSort class="mat-elevation-z8 table">
             <ng-container matColumnDef="EjercicioId">
@@ -116,6 +104,14 @@
               <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Descripcion </th>
               <td mat-cell *matCellDef="let element"> {{element.Ejercicio.Descripcion}} </td>
             </ng-container>
+            <ng-container matColumnDef="Series">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Series </th>
+                <td mat-cell *matCellDef="let element"> {{element.Series}} </td>
+              </ng-container>
+              <ng-container matColumnDef="Repeticiones">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header class="column-title"> Repeticiones </th>
+                  <td mat-cell *matCellDef="let element"> {{element.Repeticiones}} </td>
+                </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
           </table>
@@ -123,7 +119,7 @@
         </div>
         <div class="col-lg-12 table-custom">
           <h3 class="text-center" style="margin-top:0;">
-            <small>Dieta - "{{this.dieta[0].Dieta.Nombre}}"</small>
+            Dieta - "{{this.dieta[0].Dieta.Nombre}}"
           </h3>
           <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 table table-custom">
 
