--- a/GymWare-Frontend/src/app/default/default.component.css
+++ b/GymWare-Frontend/src/app/default/default.component.css
@@ -1,15 +1,23 @@
 .center {
     background-color: white;
-    width: 100%;
-    height: 100%;
-    padding-top: 20px;
+    /* width: 100%;
+    height: 100%; */
+    position: relative;
+    min-height: 745px;
+    margin-top: 0.5%;
     /*background-image: url(../../assets/emotionheader4679144_4.jpg);*/
 }
 .footer {
-    bottom: 0;
-    height: 15%;
-    width: 100%;
+    position: absolute;
+    /* height: 15%;
+    width: 100%; */
+    left: 0 ; right: 0; bottom: 0; 
 }
 .header {
     top: 0;
+}
+.contenedor {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-top: 1%;
 }
