--- a/GymWare-Frontend/src/app/default/default.component.html
+++ b/GymWare-Frontend/src/app/default/default.component.html
@@ -3,7 +3,7 @@
       <app-header></app-header>
   </div>
   <div class="center">
-      <div class="container">
+      <div class="contenedor">
           <router-outlet></router-outlet>
       </div>
   </div>
