--- a/GymWare-Frontend/src/styles.css
+++ b/GymWare-Frontend/src/styles.css
@@ -23,3 +23,15 @@ body {
 .font-edit {
     font-family: 'Montserrat', sans-serif;
 }
+.mat-paginator-range-label {
+    display: none;
+}
+h1 {
+    font-family: 'Montserrat', sans-serif;
+}
+.fc-day-number{
+    font-size: 16px;
+}
+h2{
+    font-size: 22px;
+}
