--- a/GymWare-Frontend/src/app/footer/footer.component.css
+++ b/GymWare-Frontend/src/app/footer/footer.component.css
@@ -8,7 +8,8 @@ div .section-title {
     text-transform: uppercase;
 }
 #footer {
-    background: #f2b632 !important;
+    /* background: #f2b632 !important; */
+    background-color: #252839 !important;
     border-radius: 3px;
 }
 #footer h5{
