--- a/GymWare-Frontend/src/app/cliente/cliente.component.css
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.css
@@ -17,12 +17,13 @@
     background-color: white;
     width: 100%;
     height: 100%;
-    
+    padding-bottom: 1.5%;
 }
 .footer {
     bottom: 0;
     height: 15%;
     width: 100%;
+    background-color: #252839 !important;
 }
 .header {
     top: 0;
