--- a/GymWare-Frontend/src/app/cliente/cliente.component.html
+++ b/GymWare-Frontend/src/app/cliente/cliente.component.html
@@ -147,7 +147,7 @@
 
     </div>
   </div>
-  <div class="footer">
+  <!-- <div class="footer"> -->
     <app-footer></app-footer>
-  </div>
+  <!-- </div> -->
 </div>
